Inclusao de subprojetos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,12 @@
     <div class="grid">
       <ul>
         <li><a href="/"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="/about.html"><i class="fa fa-info-circle"></i>About</a></li>
+        <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Viagens</a></li>
+        <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Concurso FAB</a></li>
+        <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Concurso Exército</a></li>
+        <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Concurso Marinha</a></li>
+        <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Cursos de TI</a></li>
+        <li><a href="/about.html"><i class="fa fa-info-circle"></i>Sobre</a></li>
       </ul>
     </div>
   </nav>
