--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,7 @@
         <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Concurso Marinha</a></li>
         <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Cursos de TI</a></li>
         <li><a href="/viagens/"><i class="fa fa-info-circle"></i>Investimentos</a></li>
+        <li><a href="/livros/"><i class="fa fa-info-circle"></i>Recomendações de Livros</a></li>
         <li><a href="/about.html"><i class="fa fa-info-circle"></i>Sobre</a></li>
       </ul>
     </div>
