--- a/css/style.scss
+++ b/css/style.scss
@@ -274,7 +274,7 @@ code{
 
 article{
 	header{
-		border-bottom: 0.7px solid #ccc;
+		border-bottom: 0.7px solid #acc;
 	}
 	section{
 		p{
@@ -288,7 +288,7 @@ article{
 	footer{
 		border-top: 1px solid #ccc;
 		margin: 0px;
-		padding-top: 10px;
+		padding-top: 8px;
 		p{
 			text-align: center;
 		}
